nova_tests/strings/neg/plan131_alloc_outside_unsafe.nv
// Plan 131 Ф.1 NEG — calling unsafe fn outside unsafe {} block rejected.
// Tests E_UNSAFE_CALL_REQUIRES_WRAP enforcement at call-site.
//
// NOTE: unsafe enforcement on IMPORTED external fns (from stdlib like
// RawMem.alloc) is a known V1 limitation — the checker only fires on
// unsafe fns declared in the SAME module. This test uses a local
// declaration to exercise the same checker path.
//
// EXPECT_COMPILE_ERROR E_UNSAFE_CALL_REQUIRES_WRAP

module neg.plan131_alloc_outside_unsafe

// Local external unsafe fn declaration to exercise checker enforcement.
// Same semantic contract as RawMem.alloc — allocate n bytes, return raw ptr.
external unsafe fn local_alloc(n int) -> *mut u8

fn main() -> () {
    // Missing unsafe {} wrap — should fail at type-checker with
    // E_UNSAFE_CALL_REQUIRES_WRAP.
    ro _p = local_alloc(8)
    println("should not reach here")
}
